@@ -1,4 +1,8 @@
 
+
+- added -o option to ssh-{push,pull} to pass extra FUSE options in
+
+
 v0.74 (September 07 2008)
 =========================
 - src: update for libHX 1.25
